tests/sksl/errors/StaticSwitchTest.glsl
### Compilation failed:

error: static switch has non-static test
1 error
